--- a/src/public/cars.html
+++ b/src/public/cars.html
@@ -74,7 +74,7 @@
               <button class="btn btn-ghost" type="button" data-compare-toggle>
                 Compare
               </button>
-              <button data-audio="C:\CICD\project\Nicholas\DIT-2A25-HawaiianPizza\src\public\sounds\add_to_cart_bright_bell.mp3"class="btn btn-primary" type="button" data-add-cart>
+              <button data-audio="./sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
                 Add to Cart
               </button>
             </div>
@@ -136,7 +136,7 @@
               <button class="btn btn-ghost" type="button" data-compare-toggle>
                 Compare
               </button>
-              <button class="btn btn-primary" type="button" data-add-cart>
+              <button data-audio="./sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
                 Add to Cart
               </button>
             </div>
