debugging error where relative path does not work so using absolute path

--- a/src/public/cars.html
+++ b/src/public/cars.html
@@ -74,7 +74,7 @@
               <button class="btn btn-ghost" type="button" data-compare-toggle>
                 Compare
               </button>
-              <button data-audio="./sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
+              <button data-audio="/sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
                 Add to Cart
               </button>
             </div>
@@ -107,7 +107,7 @@
                 class="btn btn-primary" 
                 type="button" 
                 data-add-cart
-                data-audio="./sounds/add_to_cart_bright_bell.mp3">
+                data-audio="/sounds/add_to_cart_bright_bell.mp3">
                 Add to Cart
               </button>
             </div>
@@ -136,7 +136,7 @@
               <button class="btn btn-ghost" type="button" data-compare-toggle>
                 Compare
               </button>
-              <button data-audio="./sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
+              <button data-audio="/sounds/add_to_cart_bright_bell.mp3" class="btn btn-primary" type="button" data-add-cart>
                 Add to Cart
               </button>
             </div>
